# ChangeLog for net-analyzer/net-snmp
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.77 2005/01/28 16:39:36 ka0ttic Exp $

  28 Jan 2005; Aaron Walker <ka0ttic@gentoo.org> net-snmp-5.2-r2.ebuild:
  Fixed perms on snmptrapd init script. Thanks to Weeve for letting me know.

*net-snmp-5.2-r2 (28 Jan 2005)

  28 Jan 2005; Aaron Walker <ka0ttic@gentoo.org> +files/snmptrapd.conf,
  net-snmp-5.1.1-r1.ebuild, net-snmp-5.1.1.ebuild, -net-snmp-5.1.2.ebuild,
  -net-snmp-5.2-r1.ebuild, +net-snmp-5.2-r2.ebuild, net-snmp-5.2.ebuild:
  Revision bump; added conf script (w/ a few sed's we can reuse snmpd's init)
  for snmptrapd (bug 61705). Also added selinux support (via
  sec-policy/selinux-snmpd) for bug 79749. Marked 5.2 stable on x86 and tidy'd
  old ebuilds.

*net-snmp-5.2-r1 (26 Jan 2005)

  26 Jan 2005; Aaron Walker <ka0ttic@gentoo.org> +net-snmp-5.2-r1.ebuild:
  Revision bump; added local USE flag smux for bug 77871. Also, use ht_fix_all
  from fixheadtails.eclass rather than the nasty sed ... * call.

  08 Jan 2005; Daniel Black <dragonheart@gentoo.org> net-snmp-5.2.ebuild:
  tail -1 problem fixed from bug #69775

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  19 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  net-snmp-5.1.1-r1.ebuild:
  Stable on alpha.

  17 Dec 2004; Eldad Zack <eldad@gentoo.org> net-snmp-5.2.ebuild:
  autoconf re-fix (perl), changed sedding to be line-number independant for
  future releases. Closes #59605.

  16 Dec 2004; Dylan Carlson <absinthe@gentoo.org> net-snmp-5.1.1-r1.ebuild:
  Stable on amd64.

*net-snmp-5.2 (27 Nov 2004)

  27 Nov 2004; Martin Holzer <mholzer@gentoo.org> +net-snmp-5.2.ebuild:
  VErsion bumped.

  23 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  net-snmp-5.1.1-r1.ebuild:
  Stable on sparc

  22 Nov 2004; Eldad Zack <eldad@gentoo.org> -net-snmp-5.0.9-r1.ebuild,