@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 0582421846d72836e248f98ffacf952e net-snmp-5.2-r2.ebuild 4091
 MD5 cf98050307e99312360c4f255b220b5a net-snmp-5.1.1.ebuild 2462
+MD5 626648451f5c203ca265bb407c83d59b net-snmp-5.2-r3.ebuild 4261
 MD5 56aa4865d199dbefee49d35668bde53a net-snmp-5.1.1-r1.ebuild 3633
-MD5 32e3973ae17a98d2604be21a49280b6c ChangeLog 11816
+MD5 84a7763b1dd28e2fd7b9943e204cd889 ChangeLog 12023
 MD5 a8880d00fcb63692f13db0c6f1a312ec net-snmp-5.2.ebuild 3733
 MD5 feec9ceb3ba9f6a8b860a4a130998500 metadata.xml 214
 MD5 b492aa2a6ad459eb41a26932d4c0740b files/digest-net-snmp-5.1.1-r1 67
 MD5 b492aa2a6ad459eb41a26932d4c0740b files/digest-net-snmp-5.1.1 67
 MD5 791cd8d81154f2c1d01e3f87b86faa44 files/snmptrapd.conf 635
 MD5 93ce82e69e9c66badd05144fd498530c files/digest-net-snmp-5.2 65
-MD5 93ce82e69e9c66badd05144fd498530c files/digest-net-snmp-5.2-r2 65
+MD5 93ce82e69e9c66badd05144fd498530c files/digest-net-snmp-5.2-r3 65
 MD5 00ce9b4fa6d597e08af7ce82d3a5c246 files/snmpd.conf 599
 MD5 1cc5b20de8fc9e7c807195c320ab2f4b files/net-snmp-proc.patch 2448
 MD5 ed2e953a9a923caec45eeca95bec2efc files/snmpd-5.1.conf 606
@@ -21,7 +21,7 @@ MD5 0dbde7b1bdd9c9dc988039e676800337 files/snmpd-5.1.rc6 714
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.0 (GNU/Linux)
 
-iD8DBQFB+mrREZCkKN40op4RAk54AJ0VU+MsfESAfzHIjEVJLevu3ZN7WQCeMVT7
-xyZwv78TNjqzBG0tXURHfVs=
-=xFBH
+iD8DBQFB/IhAEZCkKN40op4RAhZxAJ9VEOKFd28gOJFrivlS2XOBxzfXSACgvPv5
+3ap3eW8DPTWBxtbiFmBMD4o=
+=acTq
 -----END PGP SIGNATURE-----
