@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/net-snmp
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.77 2005/01/28 16:39:36 ka0ttic Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/net-snmp/ChangeLog,v 1.78 2005/01/30 07:09:42 ka0ttic Exp $
+
+*net-snmp-5.2-r3 (30 Jan 2005)
+
+  30 Jan 2005; Aaron Walker <ka0ttic@gentoo.org> -net-snmp-5.2-r2.ebuild,
+  +net-snmp-5.2-r3.ebuild:
+  Yet another revision bump; install html docs if USE=doc for bug 79934.
 
   28 Jan 2005; Aaron Walker <ka0ttic@gentoo.org> net-snmp-5.2-r2.ebuild:
   Fixed perms on snmptrapd init script. Thanks to Weeve for letting me know.
